[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["serde", "v4", "js"] }
sqlx = { version = "0.7.1", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "json" ], optional = true }

[features]
backend = ["sqlx"]
