[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# SHARED
shared = { path = "../../shared" }

#UTILS
async-trait = "0.1"
uuid = { version = "1.3", features = ["serde", "v4", "js"] }

actix-web = "4.3.1"
tracing = "0.1"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2.0.0"